<resources>
    <string name="app_name">Portfolio App</string>

    <string name="action_settings">Settings</string>
    <string name="text_view_title">My Nanodegree Apps</string>
    <string name="button_spotify_streamer_title">Spotify Streamer App</string>
    <string name="button_scores_app_title">Scores App</string>
    <string name="button_library_app_title">Library App</string>
    <string name="button_build_it_app_title">Build it Bigger App</string>
    <string name="button_capstone_app_title">Capstone App</string>
    <string name="button_reader_app_title">XYZ Reader App</string>
</resources>
